corrected some access levels one of the worker variables that is accessed from both threads is now 'volatile'